fixes layout issues in TracingLayoutView

--- a/app/assets/stylesheets/trace_view/_right_menu.less
+++ b/app/assets/stylesheets/trace_view/_right_menu.less
@@ -4,13 +4,7 @@
 #abstract-tree-canvas {
   flex-grow: 1;
   min-height: 600px;
-}
-
-#right-menu {
-
-  ul {
-    overflow-y: auto;
-  }
+  width: 100%;
 }
 
 #tree-list {
@@ -22,7 +16,6 @@
   .ant-input-group {
     margin: 10px 0px;
   }
-
 }
 
 #comment-list {
